fix color contrastissue

--- a/styles/form.css
+++ b/styles/form.css
@@ -1,6 +1,6 @@
 :root {
     --primary-color: #291dd3;
-    --secondary-color: #d9dadf;
+    --secondary-color: #b6c1f8;
     --accent-color: #e2e0e0;
     --font-color: #f8f9fa;
     --font-color1: #000000;
